# qt-creator-vscode-icons-theme

./: CMakeLists.txt  README.md  VSCodeIconsTheme.json.in  resources.qrc
.github/workflows/: build_cmake.yml
3rd/: readme.md
resources/: supportedExtensions.json  supportedFolders.json
src/: plugin.cpp
